--- a/tradeachair.html
+++ b/tradeachair.html
@@ -112,7 +112,8 @@ document.getElementById('sc').innerText = parseInt(document.getElementById('sc')
 <span id=euc>0</span>
 <button onclick="document.getElementById('euc').innerText = parseInt(document.getElementById('euc').innerText) + progress * reuc;
 d += 0.01;
-document.getElementById('dc').innerText = Math.floor(d)">Buy</button>
+document.getElementById('dc').innerText = Math.floor(d);
+">Buy</button>
 
 <p>Extremely Uncomfortable Chair</p>
 
@@ -142,6 +143,7 @@ document.getElementById('multi').innerText = '(' + prestige + 'x)'
 }">Unlock Buy</button>
 
 <p>Very Uncomfortable Chair</p>
+<p></p>
 
 <img src="https://t3.ftcdn.net/jpg/01/90/02/66/360_F_190026621_xky8X51XqkYvPpR11LzFN2sblCstq3ze.jpg" width="70">
 <span id=uc>0</span>
