--- a/tradeachair.html
+++ b/tradeachair.html
@@ -66,8 +66,28 @@ localStorage.setItem('t', document.getElementById('t').innerText);
 localStorage.setItem('mc', document.getElementById('mc').innerText);
 localStorage.setItem('dc', document.getElementById('dc').innerText);
 localStorage.setItem('progress', progress);
-localStorage.setItem('prestige', prestige)
-">Save</button>
+localStorage.setItem('prestige', prestige);
+localStorage.setItem('reuc', reuc);
+localStorage.setItem('rvuc', rvuc);
+localStorage.setItem('ruc', ruc);
+localStorage.setItem('rsc', rsc);
+localStorage.setItem('d', d);
+localStorage.setItem('vucmake', vucmake);
+localStorage.setItem('ucmake', ucmake);
+localStorage.setItem('scmake', scmake);
+localStorage.setItem('spucmake', spucmake);
+localStorage.setItem('acmake', acmake);
+localStorage.setItem('brcmake', brcmake);
+localStorage.setItem('qucmake', qucmake);
+localStorage.setItem('stcmake', stcmake);
+localStorage.setItem('cmake', cmake);
+localStorage.setItem('brzcmake', brzcmake);
+localStorage.setItem('bmake', bmake);
+localStorage.setItem('cpcmake', cpcmake);
+localStorage.setItem('slcmake', slcmake);
+localStorage.setItem('ptcmake', ptcmake);
+localStorage.setItem('gcmake', gcmake);
+localStorage.setItem('tmake', tmake)">Save</button>
 <button onclick="document.getElementById('euc').innerText = localStorage.getItem('euc');
 document.getElementById('vuc').innerText = localStorage.getItem('vuc');
 document.getElementById('uc').innerText = localStorage.getItem('uc');
@@ -88,8 +108,28 @@ document.getElementById('t').innerText = localStorage.getItem('t');
 document.getElementById('mc').innerText = localStorage.getItem('mc');
 document.getElementById('dc').innerText = localStorage.getItem('dc');
 progress = localStorage.getItem('progress');
-prestige = localStorage.getItem('prestige')
-">Load</button>
+prestige = localStorage.getItem('prestige');
+reuc = localStorage.getItem('reuc');
+rvuc = localStorage.getItem('rvuc');
+ruc = localStorage.getItem('ruc');
+rsc = localStorage.getItem('rsc');
+d = localStorage.getItem('d');
+vucmake = localStorage.getItem('vucmake');
+ucmake = localStorage.getItem('ucmake');
+scmake = localStorage.getItem('scmake');
+spucmake = localStorage.getItem('spucmake');
+acmake = localStorage.getItem('acmake');
+brcmake = localStorage.getItem('brcmake');
+qucmake = localStorage.getItem('qucmake');
+stcmake = localStorage.getItem('stcmake');
+cmake = localStorage.getItem('cmake');
+brzcmake = localStorage.getItem('brzcmake');
+bmake = localStorage.getItem('bmake');
+cpcmake = localStorage.getItem('cpcmake');
+slcmake = localStorage.getItem('slcmake');
+ptcmake = localStorage.getItem('ptcmake');
+gcmake = localStorage.getItem('gcmake');
+tmake = localStorage.getItem('tmake')">Load</button>
 <br><br>
 
 <h3>Upgrades: </h3>
