--- a/tradeachairtest1.html
+++ b/tradeachairtest1.html
@@ -46,8 +46,8 @@ ub('scub', 'scbuy')
 ">Prestige <span id=multi>(1x)</span></button>
 <br><br>
 
-<button onclick="localStorage.setItem('body', document.body.innerHTML)">Save</button>
-<button onclick="document.body.innerHTML = localStorage.getItem('body')">Load</button>
+<button onclick="localStorage.setItem('html', document.html.innerHTML)">Save</button>
+<button onclick="document.body.innerHTML = localStorage.getItem('html')">Load</button>
 <br><br>
 
 <h3>Upgrades: </h3>
