--- a/tradeachair.html
+++ b/tradeachair.html
@@ -115,7 +115,7 @@ reuc = localStorage.getItem('reuc');
 rvuc = localStorage.getItem('rvuc');
 ruc = localStorage.getItem('ruc');
 rsc = localStorage.getItem('rsc');
-d = localStorage.getItem('d');
+d = parseInt(localStorage.getItem('d'));
 vucmake = localStorage.getItem('vucmake');
 ucmake = localStorage.getItem('ucmake');
 scmake = localStorage.getItem('scmake');
