--- a/tradeachairtest1.html
+++ b/tradeachairtest1.html
@@ -78,22 +78,22 @@ rvuc = localStorage.getItem('rvuc');
 ruc = localStorage.getItem('ruc');
 rsc = localStorage.getItem('rsc');
 d = localStorage.getItem('d');
-vucmake = localStorage.getItem('vucmake');
-ucmake = localStorage.getItem('ucmake');
-scmake = localStorage.getItem('scmake');
-spucmake = localStorage.getItem('spucmake');
-acmake = localStorage.getItem('acmake');
-brcmake = localStorage.getItem('brcmake');
-qucmake = localStorage.getItem('qucmake');
-stcmake = localStorage.getItem('stcmake');
-cmake = localStorage.getItem('cmake');
-brzcmake = localStorage.getItem('brzcmake');
-bmake = localStorage.getItem('bmake');
-cpcmake = localStorage.getItem('cpcmake');
-slcmake = localStorage.getItem('slcmake');
-ptcmake = localStorage.getItem('ptcmake');
-gcmake = localStorage.getItem('gcmake');
-tmake = localStorage.getItem('tmake')">Load</button>
+vucmake = parseInt(localStorage.getItem('vucmake'));
+ucmake = parseInt(localStorage.getItem('ucmake'));
+scmake = parseInt(localStorage.getItem('scmake'));
+spucmake = parseInt(localStorage.getItem('spucmake'));
+acmake = parseInt(localStorage.getItem('acmake'));
+brcmake = parseInt(localStorage.getItem('brcmake'));
+qucmake = parseInt(localStorage.getItem('qucmake'));
+stcmake = parseInt(localStorage.getItem('stcmake'));
+cmake = parseInt(localStorage.getItem('cmake'));
+brzcmake = parseInt(localStorage.getItem('brzcmake'));
+bmake = parseInt(localStorage.getItem('bmake'));
+cpcmake = parseInt(localStorage.getItem('cpcmake'));
+slcmake = parseInt(localStorage.getItem('slcmake'));
+ptcmake = parseInt(localStorage.getItem('ptcmake'));
+gcmake = parseInt(localStorage.getItem('gcmake'));
+tmake = parseInt(localStorage.getItem('tmake'))">Load</button>
 <br><br>
 
 <h3>Upgrades: </h3>
