--- a/tradeachairtest1.html
+++ b/tradeachairtest1.html
@@ -184,7 +184,7 @@ if(prestige < 2){
 prestige = 2;
 }
 document.getElementById('multi').innerText = '(' + prestige + 'x)'
-}">Unlock Buy</button>
+">Unlock Buy</button>
 
 <p class=vucname style="display:none">Very Uncomfortable Chair</p>
 <p></p>
