--- a/tradeachair.html
+++ b/tradeachair.html
@@ -266,7 +266,7 @@ document.getElementById('gc').innerText = parseInt(document.getElementById('gc')
 }">Trade</button>
 <p>Throne</p>
 
-<p>placeholder text for image</p>
+<img src="https://greensofa24.github.io/tradeachair/magicchair.png" width="70">
 <span id=mc>0</span>
 <p>Magic Chair</p>
 
