--- a/this.html
+++ b/this.html
@@ -26,13 +26,19 @@ if (n == 1) {document.getElementById('t2').style.display = 'inline'}
 if (n == 2) {document.getElementById('u1').style.display = 'inline';
 document.getElementById('t3').style.display = 'block';
 document.getElementById('t3').style.top = window.innerHeight + 'px';
-document.body.style.height = window.innerHeight + 21 + 'px'}">Next (2/10)</button>
+document.body.style.height = window.innerHeight + 21 + 'px'}
+if (n == 3) {document.getElementById('t4').style.display = 'inline'}">Next (2/10)</button>
 <button id=t2 style="display:none" onclick="this.style.display = 'none';
 document.getElementById('n1').style.display = 'inline';
 document.getElementById('n1').innerText = 'Next (3/10)';
 n = 2">Click</button>
 <button id=u1 style="display:none">Click</button>
-<button id=t3 style="display:none; position:absolute;" onclick="">Click</button>
+<button id=t3 style="display:none; position:absolute;" onclick="this.style.display = 'none';
+document.getElementById('u1').style.display = 'none';
+document.getElementById('n1').style.display = 'inline';
+document.getElementById('n1').innerText = 'Next (4/10)';
+n = 3;
+document.body.style.height = window.innerHeight - 21 + 'px'">Click</button>
 
 <script>
 var b = document.getElementById("t2");
@@ -43,7 +49,7 @@ function change()
     b.style.left = i+"px";
     b.style.top = j+"px";
 }
-setInterval(change, 550);
+setInterval(change, 600);
 </script>
 </body>
 </html>
